--- a/index.html
+++ b/index.html
@@ -168,7 +168,11 @@
     </div>
   </div>
 
-  <button class="join-button" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSfJyn1mlqKSKCcXhcdiOXxzFU0wOfUsMtzgre8-wC331Gzyvg/viewform?usp=sf_link'">Join Us →</button>
+  <div class="buttons-container">
+    <button class="action-button" onclick="window.open('https://docs.google.com/forms/d/1ZjFEc4qKVyp3j5C6DaRoFELEdZYJkcHFFkIv9xYhM8I/viewform')">Seekers</button>
+    <button class="action-button" onclick="window.open('https://docs.google.com/forms/d/1Rm7ZdGZ3yX3Sa2hU7Ew2UOZgs4KQ3OVs2WR9fF-IsWk/viewform')">Providers</button>
+  </div>
+
 
 </body>
 </html>
